div to p text-center

--- a/_posts/2020-09-01-snapshots-sept-2020-may-2021.html
+++ b/_posts/2020-09-01-snapshots-sept-2020-may-2021.html
@@ -101,11 +101,9 @@ images:
 ---
 <link rel="stylesheet" type="text/css" href="../gallery.css"/>
 
-<div class="text-center">
-  <p>
-    Escaping to the Caribbean and moving to Chicago
-  </p>
-</div>
+<p class="text-center">
+  Escaping to the Caribbean and moving to Chicago
+</p>
 
 {% for image in page.images %}
         <div class="container">
