--- a/_posts/2022-06-01-snapshots-june-2022-aug-2022-la.html
+++ b/_posts/2022-06-01-snapshots-june-2022-aug-2022-la.html
@@ -154,13 +154,12 @@ images:
 
 <link rel="stylesheet" type="text/css" href="../gallery.css"/>
 
-<div class="text-center">
-  <p>
-    My summer in LA, and my first time in California! I had a blast: from acro-yoga on beaches to 
-    trying new foods, each day always had something in store for me. It was the best summer I've ever had, and 
-    the memories keep me warm. 
-  </p>
-</div>
+
+<p class="text-center">
+  My summer in LA, and my first time in California! I had a blast: from acro-yoga on beaches to 
+  trying new foods, each day always had something in store for me. It was the best summer I've ever had, and 
+  the memories keep me warm. 
+</p>
 
 <br>
 
