--- a/_posts/2022-08-01-snapshots-aug-2022-sf.html
+++ b/_posts/2022-08-01-snapshots-aug-2022-sf.html
@@ -58,12 +58,10 @@ images:
 
 <link rel="stylesheet" type="text/css" href="../gallery.css"/>
 
-<div class="text-center">
-  <p>
-    This, by far, is my most impulsive decision to date. Turns out, deciding to visit San Francisco and planning an entire weekend trip 
-    can easily be done 12 hours before your flight. It was everything I could have imagined, and more. 
-  </p>
-</div>
+<p class="text-center">
+  This, by far, is my most impulsive decision to date. Turns out, deciding to visit San Francisco and planning an entire weekend trip 
+  can easily be done 12 hours before your flight. It was everything I could have imagined, and more. 
+</p>
 
 <br>
 
