--- a/_posts/2022-12-15-snapshots-dec-2022-nyc.html
+++ b/_posts/2022-12-15-snapshots-dec-2022-nyc.html
@@ -178,13 +178,11 @@ images:
 
 <link rel="stylesheet" type="text/css" href="../gallery.css"/>
 
-<div class="text-center">
-  <p>
-    With the end of the semester came my first (and long awaited) trip to NYC. We stayed for a week in Manhattan, 
-    hopping the F train to SoHo, Chinatown, the Lower East Side, Greenwich, and just about every other neighborhood. 
-    Anything you can think of, we did - highlights include holiday markets, Times Square, and seeing Wicked on Broadway! 
-  </p>
-</div>
+<p class="text-center">
+  With the end of the semester came my first (and long awaited) trip to NYC. We stayed for a week in Manhattan, 
+  hopping the F train to SoHo, Chinatown, the Lower East Side, Greenwich, and just about every other neighborhood. 
+  Anything you can think of, we did - highlights include holiday markets, Times Square, and seeing Wicked on Broadway! 
+</p>
 
 <br>
 
