--- a/_posts/2022-12-24-out-of-this-world-research-at-IPAM.html
+++ b/_posts/2022-12-24-out-of-this-world-research-at-IPAM.html
@@ -124,5 +124,5 @@ externalLink: false
 
 <p>
     Check out our poster and results <a href="https://drive.google.com/file/d/1buYRt5Ct7bO7Fr4f6bnwlTeaWTxB14w7/view?usp=share_link" target="_blank">here</a>.
-    For more information about my experiences at these conferences, check out the links below! 
+    For more information about my experiences at these conferences or in LA, check out the links below! 
 </p>
