--- a/_posts/2023-01-27-wisdoms-daughter-walks-alone.html
+++ b/_posts/2023-01-27-wisdoms-daughter-walks-alone.html
@@ -4,9 +4,10 @@ layout: post
 date: 2023-01-27 01:18
 image: ../assets/images/blog/fibonacci-spiral.png 
 headerImage: true 
-tag: 
+hidden: true
+<!-- tag: 
 - research 
-- Lincoln 
+- Lincoln  -->
 category: blog 
 author: kjros 
 description: "Flying solo at a women's mathematics conference"
