--- a/_drafts/2023-01-27-wisdoms-daughter-walks-alone.html
+++ b/_drafts/2023-01-27-wisdoms-daughter-walks-alone.html
@@ -4,10 +4,9 @@ layout: post
 date: 2023-01-27 01:18
 image: ../assets/images/blog/fibonacci-spiral.png 
 headerImage: true 
-hidden: true
-<!-- tag: 
+tag: 
 - research 
-- Lincoln  -->
+- Lincoln 
 category: blog 
 author: kjros 
 description: "Flying solo at a women's mathematics conference"
