making a cheat sheet info

--- a/about.html
+++ b/about.html
@@ -29,4 +29,10 @@ layout: page
     Feel free to click around, or send me an email. 
   </p>
   
+  <p>
+    <small>
+      Psst: don't have much time to explore? Try reading <a href="{% link _posts/2002-01-02-cheat-sheet.html %}">this</a>.
+    </small>
+  </p>
+
 </div>
