fixing date liquid tags

--- a/_posts/2002-01-02-cheat-sheet.html
+++ b/_posts/2002-01-02-cheat-sheet.html
@@ -4,8 +4,7 @@ layout: post
 date: 2002-01-02 00:00
 image: ../assets/images/blog/crown.png 
 headerImage: true 
-tags: 
-- recommendations 
+nodate: true
 category: blog 
 author: kjros 
 description: "For those who need the quick and clean version of me"
@@ -21,10 +20,6 @@ hidden: true
 <p>
     Want to learn about me and my personal interests, but don't have the time to read my lengthy blog posts? 
     You found the right page! (Sh... it's a secret. Don't tell anyone.)
-</p>
-
-<p>
-    Feel free to read my <i>condensed</i> version, if you will. Includes: my favorite movie, book, coding language, and more!
 </p>
 
 <hr>
@@ -82,43 +77,47 @@ hidden: true
     </h4>
 </div>
 
+<div  class="text-center">
 
 <p>
-    Coding Language: 
-    Python. Simple, clean, and versatile. 
+    <b>Coding Language:</b> Python <br>
+    Simple, clean, and versatile. 
 </p>
 
 <p>
-    Book: 
-    <i>A Little Life</i>, by Hanya Yanigahara. Heartbreaking, but beautiful writing. 
+    <b>Book:</b> <i>A Little Life</i>, by Hanya Yanigahara <br>
+    Heartbreaking, but beautiful writing. 
 </p>
 
 <p>
-    Movie: 
-    <i>Clue</i> (1985). A childhood favorite black comedy mystery, which only got better with age. 
+    <b>Movie:</b> <i>Clue</i> (1985) <br>
+    A childhood favorite black comedy mystery, which only got better with age. 
 </p>
 
 <p>
-    TV Show: 
-    <i>Sherlock</i> (2010-2017). 
+    <b>TV Show:</b> <i>Sherlock</i> (2010-2017) <br>
+    Still waiting for season 5. 
 </p>
 
 <p>
-    City: 
-    NYC. Chicago and San Francisco are close, though. 
+    <b>City:</b> NYC <br>
+    Chicago and San Francisco are close, though. 
 </p>
 
 <p>
-    Video Game: 
-    Kirby and the Forgotten Land / Kirby's Return to Dreamland. Poyo. 
+    <b>Video Game:</b> Kirby and the Forgotten Land<br>
+    Also, Kirby's Return to Dreamland. Poyo. 
 </p>
 
 <p>
-    Smash Character: 
-    Pyra/Mythra. I'm actually pretty bad at it, but this duo's pretty S tier. 
+    <b>Number:</b> 3 <br>
+    Kind of superstitious about it. <br>
+    Good for balance, aesthetic, and <a href="https://en.wikipedia.org/wiki/Rule_of_three_(writing)" target="_blank">writing</a>. <br>
+    9 and 27 are also quite excellent.
 </p>
+</div>
 
-
+<!-- 
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7sljA9XJXVCbbXLK5XpDtu?utm_source=generator&theme=0" 
     width="70%" height="152" frameBorder="0" allowfullscreen="" 
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> -->
