make playlist file and fix hidden var

--- a/_posts/2000-01-01-cheat-sheet.html
+++ b/_posts/2000-01-01-cheat-sheet.html
@@ -2,7 +2,7 @@
 title: Cheat Sheet
 layout: post
 date: 2000-01-01 00:00
-image: ../assets/images/blog/crown.png 
+image: ../assets/images/blog/pen.png
 headerImage: true 
 nodate: true
 category: blog 
@@ -35,7 +35,7 @@ hidden: true
 
 <p>
     The thing is, I wanted total control, and this meant designing <i>anything</i> I wanted. I had used website builders in high school, 
-    but they didn't have quite the same freedom I was seeking. I wanted to create something I could be proud of, understand what was going behind the scenes. and have fun! 
+    but they didn't have quite the same freedom I was seeking. I wanted to create something I could be proud of, understand what was going behind the scenes, and have fun! 
 </p>
 
 <p>
@@ -67,6 +67,7 @@ hidden: true
     <li>trying new food</li>
     <li>paper crafts/cards</li>
     <li>video games</li>
+    <li>music</li>
 </ul>
 
 <hr> 
@@ -117,7 +118,3 @@ hidden: true
 </p>
 </div>
 
-<!-- 
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7sljA9XJXVCbbXLK5XpDtu?utm_source=generator&theme=0" 
-    width="70%" height="152" frameBorder="0" allowfullscreen="" 
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> -->
