--- a/about.html
+++ b/about.html
@@ -31,7 +31,9 @@ layout: page
   
   <p>
     <small>
-      Psst: don't have much time to explore? Try reading <a href="{% link _posts/2002-01-02-cheat-sheet.html %}">this</a>.
+      Psst: don't have much time to explore? Try reading <a href="{% link _posts/2000-01-01-cheat-sheet.html %}">this</a>.
+      <br>
+      Alternatively, to listen to some quirky tunes, click <a href="{% link _posts/2000-01-02-currated-playlist.html %}">here</a>.
     </small>
   </p>
 
