fixing centering on interests

--- a/_posts/2000-01-01-cheat-sheet.html
+++ b/_posts/2000-01-01-cheat-sheet.html
@@ -49,26 +49,41 @@ hidden: true
 </p>
 
 <hr>
-
-<ul style="text-align: center; list-style-type:none">
-    <li><h4>Interests:</h4></li>
-    <li>discrete mathematics 
-        <li><i>graph theory</i></li>
-        <li><i>number theory</i></li>
-        <li><i>logic</i></li>
-        <li><i>combinatorics</i></li>
-        <li><i>set theory</i></li>
-    <li>coding/this site!</li>
-    <li>traveling</li>
-    <li>collecting transit cards</li>
-    <li>reading</li>
-    <li>writing</li>
-    <li>cooking</li>
-    <li>trying new food</li>
-    <li>paper crafts/cards</li>
-    <li>video games</li>
-    <li>music</li>
-</ul>
+<div class="text-center">
+    <h4>Interests:</h4>
+    <p>
+        discrete mathematics 
+        <br>
+        <i>graph theory</i>
+        <br>
+        <i>number theory</i>
+        <br>
+        <i>logic</i>
+        <br> 
+        <i>combinatorics</i>
+        <br>
+        <i>set theory</i>
+        coding/this site!
+        <br>
+        traveling
+        <br>
+        collecting transit cards
+        <br>
+        reading
+        <br> 
+        writing 
+        <br> 
+        cooking 
+        <br> 
+        trying new food 
+        <br> 
+        paper crafts/cards 
+        <br>
+        video games 
+        <br>
+        music 
+    </p>
+</div>
 
 <hr> 
 
