adding some quotes

--- a/_drafts/2023-03-03-movies.html
+++ b/_drafts/2023-03-03-movies.html
@@ -26,15 +26,62 @@ description: ""
 </h3>
 
 <div class="text-center">
-    <img src="../assets/images/blog/blog-post/movie-recs/clue.jpg" alt="clue movie poster">
+    <img src="../assets/images/blog/blog-post/movie-recs/clue.jpg" style="max-width: 60%; height:auto" alt="clue movie poster">
     <p>
         Genre: <i>mystery, black comedy</i>
     </p>
 </div>
 
+<figure>
+    <blockquote>
+        <p>"Do you miss him?"</p>
+    </blockquote>
+    <blockquote>
+        <p>
+        "well, it's a matter of life after death. Now that he's dead, I have a life."
+        </p>
+    </blockquote>
+    <blockquote>
+        <p>
+            "But he was your second husband. Your first husband also disappeared."
+        </p>
+    </blockquote>
+    <blockquote>
+        <p>
+            "That was his job. He was an illusionist."
+        </p>
+    </blockquote>
+    <blockquote>
+        <p>
+            "But he never reappeared!"
+        </p>
+    </blockquote>
+    <blockquote>
+        <p>
+            "He wasn't a very good illusionist."
+        </p>
+    </blockquote>
+</figure>
+
 <h3>
     2. <i>Knives Out</i> (2019), <i>Glass Onion</i> (2022)
 </h3>
+
+<figure>
+    <blockquote>
+        <p>
+            "I feel a noose tightening. The family is truly desperate. Desperate motives, 
+            with the mystery of who hired me, the impossibility of the crime... and yet, a doughnut."
+        </p>
+    </blockquote>
+    <blockquote>
+        <p>
+            "It's so dumb."
+            "So dumb, it's brilliant!"
+            "NO! It's just dumb!"
+        </p>
+    </blockquote>
+</figure>
 
 <div class="text-center"> 
     <img src="../assets/images/blog/blog-post/movie-recs/knives-out.jpg" alt="knives out and glass onion movie poster">
@@ -48,7 +95,7 @@ description: ""
 </h3>
 
 <div class="text-center"> 
-    <img src="../assets/images/blog/blog-post/movie-recs/spider-verse.jpg" alt="spiderverse movie poster">
+    <img src="../assets/images/blog/blog-post/movie-recs/spider-verse.jpg" style="max-width: 60%; height:auto"  alt="spiderverse movie poster">
     <p>
         Genre: <i>action, adventure, animated</i>
     </p>
@@ -59,7 +106,7 @@ description: ""
 </h3>
 
 <div class="text-center">
-    <img src="../assets/images/blog/blog-post/movie-recs/baby-driver.jpg" alt="baby driver movie poster">
+    <img src="../assets/images/blog/blog-post/movie-recs/baby-driver.jpg" style="max-width: 60%; height:auto"  alt="baby driver movie poster">
     <p>
         Genre: <i>action, crime drama</i>
     </p>
@@ -70,7 +117,7 @@ description: ""
 </h3>
 
 <div class="text-center">
-    <img src="../assets/images/blog/blog-post/movie-recs/coraline.jpg" alt="coraline movie poster">
+    <img src="../assets/images/blog/blog-post/movie-recs/coraline.jpg" style="max-width: 60%; height:auto"  alt="coraline movie poster">
     <p>
         Genre: <i>stop motion, dark fantasy, horror</i>
     </p>
@@ -81,7 +128,7 @@ description: ""
 </h3>
 
 <div class="text-center">
-    <img src="../assets/images/blog/blog-post/movie-recs/500-days.jpg" alt="500 days of summer movie poster">
+    <img src="../assets/images/blog/blog-post/movie-recs/500-days.jpg" style="max-width: 60%; height:auto" alt="500 days of summer movie poster">
     <p>
         Genre: <i>rom-com, drama</i>
     </p>
@@ -92,7 +139,7 @@ description: ""
 </h3>
 
 <div class="text-center">
-    <img src="../assets/images/blog/blog-post/movie-recs/good-will-hunting.jpg">
+    <img src="../assets/images/blog/blog-post/movie-recs/good-will-hunting.jpg" style="max-width: 60%; height:auto" alt="good will hunting movie poster">
     <p>
         Genre: <i>drama</i>
     </p>
