adding and fixing quote layouts

--- a/_drafts/2023-03-03-movies.html
+++ b/_drafts/2023-03-03-movies.html
@@ -36,9 +36,9 @@ description: ""
     <blockquote>
         <p>"Do you miss him?"</p>
     </blockquote>
-    <blockquote>
+    <blockquote style="border-left: .3rem solid #bdbbbb">
         <p>
-        "well, it's a matter of life after death. Now that he's dead, I have a life."
+            "Well, it's a matter of life after death. Now that he's dead, I have a life."
         </p>
     </blockquote>
     <blockquote>
@@ -46,7 +46,7 @@ description: ""
             "But he was your second husband. Your first husband also disappeared."
         </p>
     </blockquote>
-    <blockquote>
+    <blockquote style="border-left: .3rem solid #bdbbbb">
         <p>
             "That was his job. He was an illusionist."
         </p>
@@ -56,7 +56,7 @@ description: ""
             "But he never reappeared!"
         </p>
     </blockquote>
-    <blockquote>
+    <blockquote style="border-left: .3rem solid #bdbbbb">
         <p>
             "He wasn't a very good illusionist."
         </p>
@@ -67,6 +67,13 @@ description: ""
     2. <i>Knives Out</i> (2019), <i>Glass Onion</i> (2022)
 </h3>
 
+<div class="text-center"> 
+    <img src="../assets/images/blog/blog-post/movie-recs/knives-out.jpg" alt="knives out and glass onion movie poster">
+    <p>
+        Genre: <i>mystery</i>
+    </p>
+</div>
+
 <figure>
     <blockquote>
         <p>
@@ -74,21 +81,23 @@ description: ""
             with the mystery of who hired me, the impossibility of the crime... and yet, a doughnut."
         </p>
     </blockquote>
-    <blockquote>
+    <hr>
+    <blockquote style="border-left: .3rem solid #bdbbbb">
         <p>
             "It's so dumb."
+        </p>
+    </blockquote>
+    <blockquote>
+        <p>
             "So dumb, it's brilliant!"
+        </p>
+    </blockquote>
+    <blockquote style="border-left: .3rem solid #bdbbbb">
+        <p>
             "NO! It's just dumb!"
         </p>
     </blockquote>
 </figure>
-
-<div class="text-center"> 
-    <img src="../assets/images/blog/blog-post/movie-recs/knives-out.jpg" alt="knives out and glass onion movie poster">
-    <p>
-        Genre: <i>mystery</i>
-    </p>
-</div>
 
 <h3>
     3. <i>Spider-Man: Into the Spider-verse</i> (2018)
@@ -101,6 +110,14 @@ description: ""
     </p>
 </div>
 
+<figure>
+    <blockquote>
+        <p>
+            "I don't think my atoms are real jazzed about being in the wrong dimension."
+        </p>
+    </blockquote>
+</figure>
+
 <h3>
     4. <i>Baby Driver</i> (2017)
 </h3>
@@ -111,6 +128,14 @@ description: ""
         Genre: <i>action, crime drama</i>
     </p>
 </div>
+
+<figure>
+    <blockquote>
+        <p>
+            "You rob to support a drug habit, I do drugs to support a robbery habit."
+        </p>
+    </blockquote>
+</figure>
 
 <h3>
     5. <i>Coraline</i> (2009)
@@ -123,6 +148,15 @@ description: ""
     </p>
 </div>
 
+<figure>
+    <blockquote>
+        <p>
+            "Black is traditional, but if you prefer pink, or vermilion, or chartruese... 
+            though you might make me jealous."
+        </p>
+    </blockquote>
+</figure>
+
 <h3>
     6. <i>(500) Days of Summer</i> (2009)
 </h3>
@@ -134,6 +168,30 @@ description: ""
     </p>
 </div>
 
+<figure>
+    <blockquote style="border-left: .3rem solid #bdbbbb">
+        <p>
+            "Look, we don't have to put a label on it. That's fine. I get it. But, you know, 
+            I just... I need some consistency."
+        </p>
+    </blockquote>
+    <blockquote>
+        <p>
+            "I know."
+        </p>
+    </blockquote>
+    <blockquote style="border-left: .3rem solid #bdbbbb">
+        <p>
+            "I need to know that you're not going to wake up in the morning and feel differently."
+        </p>
+    </blockquote>
+    <blockquote>
+        <p>
+            "And I can't give you that. Nobody can."
+        </p>
+    </blockquote>
+</figure>
+
 <h3>
     7. <i>Good Will Hunting</i> (1997)
 </h3>
@@ -144,3 +202,18 @@ description: ""
         Genre: <i>drama</i>
     </p>
 </div>
+
+<figure>
+    <blockquote>
+        <p>
+            "So if I asked you about art, you'd probably give me the skinny on every art book ever written. 
+            Michaelangelo, you know a lot about him. Life's work, political aspirations, him and the pope, sexual orientations, the whole works, right? 
+            But I'll bet you can't tell me what it smells like in the Sistine chapel. You've never actually stood there and looked at that beautiful ceiling; seen that. 
+            If I ask you about women, you'd probably give me a syllabus about your personal favorites. You may have even been laid a few times. 
+            But you can't tell me what it feels like to wake up next to a woman and feel truly happy. 
+            And I'd ask you about war, you'd probably throw Shakespeare at me, right? 'Once more unto the breach, dear friends.' 
+            But you've never been near one. You've never held your best friend's head in your lap, watch him gasp his last breath looking to you for help. 
+            I'd ask you about love, and you'd probably quote me a sonnet. But you've never looked at a woman and been totally vulnerable."
+        </p>
+    </blockquote>
+</figure>
