--- a/_posts/2022-12-24-out-of-this-world-research-at-IPAM.html
+++ b/_posts/2022-12-24-out-of-this-world-research-at-IPAM.html
@@ -99,8 +99,8 @@ externalLink: false
 </div>
 
 <p>
-    Our other experiments with the DCL algorithm included varying the constellation sizes, limiting communcation between certain 
-    sets of satellites, and changing the order of satellite communcation. 
+    Our other experiments with the DCL algorithm included varying the constellation sizes, limiting communication between certain 
+    sets of satellites, and changing the order of satellite communication. 
 </p>
   
 <p>
