--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@ layout: page
 <!-- ![Profile Image]({% if site.external-image %}{{ site.picture }}{% else %}{{ site.url }}/{{ site.picture }}{% endif %}) -->
 
 
+<div class="{% if site.animation %}animated{% endif %}">
+
   <img src="../assets/images/about-beanie.jpg" class="img-thumbnail" alt="profile pic of me in a beanie" style="max-width: 70%; max-height: auto; margin-bottom: 3rem;">
   
   <p>
