moving wistem as blog page

--- a/_posts/2000-01-03-wistem.html
+++ b/_posts/2000-01-03-wistem.html
@@ -1,28 +1,18 @@
 ---
-title: Activities
-layout: page
+title: Women in STEM (WiSTEM)
+layout: post 
+date: 2000-01-03 00:00 
+nodate: true 
+category: blog 
+author: kjros 
+description: "my involvement in WiSTEM"
+hidden: true 
 ---
 
 <div class="text-center">
-<h3>
-    Women in STEM (WiSTEM)
-</h3>
-  <p>
-    Chicago, IL 
-  </p>
-</div>
-
-<div class="text-center">
-  <img src="../assets/images/wistem-insta-cotreasurer.jpg" alt="instagram exec board post of me" style="max-width:55%">
-</div>
-
-<br>
-
-<div class="text-center">
+  <img src="../assets/images/wistem-insta-cotreasurer.jpg" alt="instagram exec board post of me" style="max-width:55%; margin-bottom: 7px;">
+  <br>
   <img src="../assets/images/wistem-exec-2023.JPG" alt="exec board of wistem in 2023 standing in a row" style="max-width:80%">
-</div>
-<br>
-<div class="text-center">
   <figure>
     <figcaption>2023 Executive Board of WiSTEM</figcaption>   
   </figure>
@@ -62,16 +52,18 @@ Aside from events, my favorite WiSTEM activities are the newsletter and takeover
     target="_blank">Molten Mathematics</a>," reviewed the work of mathematicians studying Surtseyan 
     volcanic bombs in 2021, and discussed the use of computer simulations in research across STEM.  
   </p>
-  <div class="text-center">
+
+<div class="text-center">
     <img src="../assets/images/wistem-newsletter.jpg" alt="first few paragraphs of molten mathematics article" style="max-width:60%">
-  </div>
-  <p>
+</div>
+
+<p>
     Additionally, WiSTEM has a very active Instagram account. Each Thursday, a member does an "Instagram takeover",
     and posts stories for other students and members to follow. I have 
     done the takeover twice thus far: once while I was a math rep, and once as the co-treasurer. 
     I posted my classes of the day, shared school tips, and answered questions about my major and myself! 
-  </p>
-  <div class="text-center">
-    <img src="../assets/images/wistem-takeover.jpg" alt="wistem takeover photo with pink backgrond and colorful stars" style="max-width:75%">
-  </div>
-<!--   
+</p>
+
+<div class="text-center">
+    <img src="../assets/images/wistem-takeover.jpg" alt="wistem takeover photo of me at navy pier" style="max-width:65%">
+</div>
