adding movie blurbs

--- a/_drafts/2023-03-03-movies.html
+++ b/_drafts/2023-03-03-movies.html
@@ -17,7 +17,7 @@ description: ""
 </p>
 
 <p>
-    Regardless, there are a few movies I grew to love (or loved immediately). 
+    Regardless, there are a few movies I consider better than others.
     Read more about them here! 
 </p>
 
@@ -36,7 +36,7 @@ description: ""
     <blockquote>
         <p>"Do you miss him?"</p>
     </blockquote>
-    <blockquote style="border-left: .3rem solid #bdbbbb">
+    <blockquote style="border-left: .3rem solid #cccccc">
         <p>
             "Well, it's a matter of life after death. Now that he's dead, I have a life."
         </p>
@@ -46,7 +46,7 @@ description: ""
             "But he was your second husband. Your first husband also disappeared."
         </p>
     </blockquote>
-    <blockquote style="border-left: .3rem solid #bdbbbb">
+    <blockquote style="border-left: .3rem solid #cccccc">
         <p>
             "That was his job. He was an illusionist."
         </p>
@@ -56,51 +56,21 @@ description: ""
             "But he never reappeared!"
         </p>
     </blockquote>
-    <blockquote style="border-left: .3rem solid #bdbbbb">
+    <blockquote style="border-left: .3rem solid #cccccc">
         <p>
             "He wasn't a very good illusionist."
         </p>
     </blockquote>
 </figure>
 
-<h3>
-    2. <i>Knives Out</i> (2019), <i>Glass Onion</i> (2022)
-</h3>
-
-<div class="text-center"> 
-    <img src="../assets/images/blog/blog-post/movie-recs/knives-out.jpg" alt="knives out and glass onion movie poster">
-    <p>
-        Genre: <i>mystery</i>
-    </p>
-</div>
-
-<figure>
-    <blockquote>
-        <p>
-            "I feel a noose tightening. The family is truly desperate. Desperate motives, 
-            with the mystery of who hired me, the impossibility of the crime... and yet, a doughnut."
-        </p>
-    </blockquote>
-    <hr>
-    <blockquote style="border-left: .3rem solid #bdbbbb">
-        <p>
-            "It's so dumb."
-        </p>
-    </blockquote>
-    <blockquote>
-        <p>
-            "So dumb, it's brilliant!"
-        </p>
-    </blockquote>
-    <blockquote style="border-left: .3rem solid #bdbbbb">
-        <p>
-            "NO! It's just dumb!"
-        </p>
-    </blockquote>
-</figure>
+<p>
+    13 year old me loved this movie; 21 year old me loves it even more. Based on the game, six strangers are invited to mysterious dinner party.
+    The one thing they have in common? They're all being blackmailed. Of course, things go a little awry when the lights go out and their host, the blackmailer, is murdered.
+    With dark humor and double entendres, this film captured my heart. 
+</p>
 
 <h3>
-    3. <i>Spider-Man: Into the Spider-verse</i> (2018)
+    2. <i>Spider-Man: Into the Spider-verse</i> (2018)
 </h3>
 
 <div class="text-center"> 
@@ -117,6 +87,38 @@ description: ""
         </p>
     </blockquote>
 </figure>
+
+<p>
+    Perhaps the most gorgeously animated movie in history. Watching <i>Into the Spider-verse</i> on the big screen left me breathless: 
+    the vivid color schemes, lines and hatches, blends of art styles, double-vision frames, electricity, crisp motions... 
+    Not only is it visually stunning, but it shattered my expectations for being a mere 'animated movie.' I will never tire of watching it. 
+</p>
+
+<h3>
+    3. <i>Knives Out</i> (2019), <i>Glass Onion</i> (2022)
+</h3>
+
+<div class="text-center"> 
+    <img src="../assets/images/blog/blog-post/movie-recs/knives-out.jpg" alt="knives out and glass onion movie poster">
+    <p>
+        Genre: <i>mystery</i>
+    </p>
+</div>
+
+<figure>
+    <blockquote>
+        <p>
+            "I feel a noose tightening. The family is truly desperate. Desperate motives, 
+            with the mystery of who hired me, the impossibility of the crime... and yet, a doughnut."
+        </p>
+    </blockquote>
+</figure>
+
+<p>
+    Whether detective Benoit Blanc is investigating a suspicious death and a dysfunctional family, or a murder on a private 
+    remote island, one thing ties the cases together: an outlandish Southern accent. Both Knives Out and its standalone sequel, The Glass Onion, 
+    boast colorful ensemble casts, witty jokes, and twisting mysteries. Can't wait for the third film. 
+</p>
 
 <h3>
     4. <i>Baby Driver</i> (2017)
@@ -136,6 +138,12 @@ description: ""
         </p>
     </blockquote>
 </figure>
+
+<p>
+    Because who can function without the perfect playlist? Follow Baby, a near-mute getaway driver sucked into a life of 
+    crime to pay off his debts. He uses music to escape this morally gray area, and if you're anything like me? 
+    You'll find Baby awkwardly charismatic and the soundtrack even more so. 
+</p>
 
 <h3>
     5. <i>Coraline</i> (2009)
@@ -157,6 +165,12 @@ description: ""
     </blockquote>
 </figure>
 
+<p> 
+    Coraline is a girl seeking excitement - so why shouldn't she travel through a portal to the Other World, where its occupants have sewn buttons for eyes? 
+    Despite being scarred for life, my sister and I watched this movie at least every two weeks as kids. 
+    With lovingly-created stop-motion animation and a compelling story, I highly recommend - as long as you're not scared of the dark. 
+</p>
+
 <h3>
     6. <i>(500) Days of Summer</i> (2009)
 </h3>
@@ -169,7 +183,7 @@ description: ""
 </div>
 
 <figure>
-    <blockquote style="border-left: .3rem solid #bdbbbb">
+    <blockquote style="border-left: .3rem solid #cccccc">
         <p>
             "Look, we don't have to put a label on it. That's fine. I get it. But, you know, 
             I just... I need some consistency."
@@ -180,7 +194,7 @@ description: ""
             "I know."
         </p>
     </blockquote>
-    <blockquote style="border-left: .3rem solid #bdbbbb">
+    <blockquote style="border-left: .3rem solid #cccccc">
         <p>
             "I need to know that you're not going to wake up in the morning and feel differently."
         </p>
@@ -191,6 +205,12 @@ description: ""
         </p>
     </blockquote>
 </figure>
+
+<p>
+    In a non-linear timeline, discover the beginning, middle, and end of the relationship between Tom and the eponymous Summer. 
+    One is a hopeless romantic, while the other doesn't believe in love. I found this film bittersweet, reminiscient of a time I 
+    can no longer remember. And yet, I was still drawn to it, despite how heartbreaking. 
+</p>
 
 <h3>
     7. <i>Good Will Hunting</i> (1997)
@@ -217,3 +237,9 @@ description: ""
         </p>
     </blockquote>
 </figure>
+
+<p>
+    Troubled, brilliant, cocky, misguided - who is Will Hunting? Haunted by his past and self-sabotaging, Will finds himself head-to-head 
+    with a psychologist determined to help him. I love this movie for its power: monologues and quips, introspection and quietly shifting moments. 
+    Try it out; you'll never be the same. 
+</p>
